--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,6 @@
 n4_address: "127.0.0.1:8805"
 n3_address: "127.0.0.1:2152"
+n6_address: "127.0.0.1:9000"
 n6_interface: "eth0"
 upf_node_id: "upf1.example.com"
 log_level: "info"
