--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ socket2 = "0.5"
 pnet = "0.35"
 clap = { version = "4.5", features = ["derive"] }
 anyhow = "1.0"
+libc = "0.2"
+
+[target.'cfg(windows)'.dependencies]
+windows-sys = { version = "0.59", features = ["Win32_Networking_WinSock"] }
